1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: static
  labels:
    istio-injection: enabled
