7-routeuser.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dockerstatic
  namespace: static
spec:
  hosts:
    - "*"
  gateways:
  - dockerstatic-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*MSIE (6|7|8).*"
    route:
    - destination:
        host: dockerstatic
        subset: v1
  - route:
    - destination:
        host: dockerstatic
        subset: v2
