8-routev1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dockerstatic
  namespace: static
spec:
  hosts:
    - "*"
  gateways:
  - dockerstatic-gateway
  http:
  - route:
    - destination:
        host: dockerstatic
        subset: v1
